--- a/jdphotography/src/components/pages/Contact/styles.css
+++ b/jdphotography/src/components/pages/Contact/styles.css
@@ -52,3 +52,7 @@
 .form-background {
 
 } */
+
+.contact-header {
+    margin-bottom: 2rem;
+}
