--- a/jdphotography/src/index.css
+++ b/jdphotography/src/index.css
@@ -1,6 +1,6 @@
 body {
   box-sizing: border-box;
-  margin: 6.5rem 0 10rem 0;
+  margin: 8rem 0 10rem 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -8,6 +8,8 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-color: black;
   color: white; 
+  overflow: scroll;
+  overflow-x: hidden;
 }
 
 code {
